# EvolAnalsis

./: .env  .gitignore  ALFWORLD_GRPO_TRAINING.md  ALFWORLD_INTEGRATION.md  DAPO_FLOW_EXPLANATION.md  DAPO_OFF_POLICY_EXPLANATION.md  README.md  TOKEN_MEAN_EXPLANATION.md  example.env  install.sh  keep_busy.sh  launcher.py  mkdocs.yml  run_launcher.sh  run_launcher_baseline.sh  test_env.ipynb  test_reme_mem.ipynb
AgentGym/: agent_gym_test.ipynb
AgentGym/agentenv-aime/: README.md  pyproject.toml
AgentGym/agentenv-aime/agentenv_aime/: env_wrapper.py  launch.py  model.py  server.py  utils.py
AgentGym/agentenv-gpqa/: README.md  pyproject.toml  setup.sh
AgentGym/agentenv-gpqa/agentenv_gpqa/: env_wrapper.py  launch.py  server.py
AgentGym/agentenv-mathbench/: README.md  pyproject.toml  setup.sh
AgentGym/agentenv-mathbench/agentenv_mathbench/: __init__.py  env_wrapper.py  launch.py  model.py  server.py
agentevolver/: main_ppo.py
beyondagent/: main_ppo.py
config/: agentevolver.yaml  alfworld_dapo_3b.yaml  alfworld_dapo_7b.yaml  alfworld_exp.yaml  alfworld_grpo.yaml  alfworld_grpo_3b.yaml  alfworld_grpo_3b_exp_replay.yaml  alfworld_grpo_7b.yaml  alfworld_grpo_7b_exp_replay.yaml  beyond_agent_dataflow.yaml  beyond_agent_dataflow_for_launcher.yaml
docs/: index.md  launcher.md
env_service/: env_service.py
examples/: run_adca_grpo.sh  run_addexp_anni.sh  run_basic.sh  run_overall.sh  run_qwen25-3b_1gpu_cc-debug.sh  run_qwen25-7b_8gpu_cc-bj.sh  run_qwen25-7b_8gpu_cc.sh  run_qwen3-8b_8gpu_explore.sh  self-question-nav-attr.yaml  self-question.yaml
(+125 files in other folders)
